--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,9 @@ dependencies {
 	compile group: 'org.projectlombok', name: 'lombok', version: '1.18.10'
 	annotationProcessor ("org.projectlombok:lombok:1.18.10")
 	
+    
+    implementation 'org.apache.commons:commons-collections4:4.1'
+	
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'io.projectreactor:reactor-test'
 	testImplementation 'org.springframework.security:spring-security-test'
