--- a/build.gradle
+++ b/build.gradle
@@ -3,13 +3,16 @@ plugins {
 	id 'io.spring.dependency-management' version '1.0.8.RELEASE'
 	id 'java'
 	id "org.hidetake.swagger.generator" version "2.18.1"
+	id "org.sonarqube" version "2.7"
 }
+
+
 
 apply plugin: "org.hidetake.swagger.generator"
 
 group = 'com.jukeboxapp'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
+sourceCompatibility = '8'
 
 configurations {
 	compileOnly {
@@ -26,6 +29,10 @@ ext {
 }
 
 dependencies {
+
+// https://mvnrepository.com/artifact/org.sonarsource.scanner.maven/sonar-maven-plugin
+	compile group: 'org.sonarsource.scanner.maven', name: 'sonar-maven-plugin', version: '3.7.0.1746'
+
 
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
