--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,8 @@ apply plugin: "org.hidetake.swagger.generator"
 
 group = 'com.jukeboxapp'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '8'
+sourceCompatibility = 8
+targetCompatibility = 8
 
 configurations {
 	compileOnly {
@@ -74,13 +75,38 @@ dependencies {
 
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.3.0.Final'
     testAnnotationProcessor 'org.mapstruct:mapstruct-processor:1.3.0.Final' 
+    
+	// https://mvnrepository.com/artifact/org.mockito/mockito-core
+	testCompile group: 'org.mockito', name: 'mockito-core', version: '3.1.0'
 	
- 	
+	testImplementation('org.springframework.boot:spring-boot-starter-test') {
+		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+	}
+	testImplementation('org.springframework.security:spring-security-test')
+	testImplementation('org.junit.jupiter:junit-jupiter-api')
+	testImplementation('org.junit.platform:junit-platform-runner')
+
+	testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine')
 	
+
 	
 }
 
+task junit(type: Test) {
+	description = 'Runs tests on the JUnit Platform.'
+	useJUnitPlatform()
+	testLogging {
+		// events 'passed', 'skipped', 'failed', 'standardOut', 'standardError'
+		events 'passed', 'skipped', 'failed'
+	}
+	
+}
 
+test {
+	description = 'Runs all tests.'
+	dependsOn junit
+	exclude(['**/*.*'])
+}
 
 dependencyManagement {
 	imports {
