--- a/build.gradle
+++ b/build.gradle
@@ -82,30 +82,18 @@ dependencies {
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
-	testImplementation('org.springframework.security:spring-security-test')
-	testImplementation('org.junit.jupiter:junit-jupiter-api')
-	testImplementation('org.junit.platform:junit-platform-runner')
 
-	testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine')
+
+	testImplementation('org.junit.jupiter:junit-jupiter:5.5.2')
 	
 
 	
 }
 
-task junit(type: Test) {
-	description = 'Runs tests on the JUnit Platform.'
-	useJUnitPlatform()
-	testLogging {
-		// events 'passed', 'skipped', 'failed', 'standardOut', 'standardError'
-		events 'passed', 'skipped', 'failed'
-	}
-	
-}
+
 
 test {
-	description = 'Runs all tests.'
-	dependsOn junit
-	exclude(['**/*.*'])
+	useJUnitPlatform()
 }
 
 dependencyManagement {
