--- a/build.gradle
+++ b/build.gradle
@@ -4,11 +4,13 @@ plugins {
 	id 'java'
 	id "org.hidetake.swagger.generator" version "2.18.1"
 	id "org.sonarqube" version "2.7"
+	id 'jacoco'
 }
 
 
 
 apply plugin: "org.hidetake.swagger.generator"
+apply plugin: "jacoco"
 
 group = 'com.jukeboxapp'
 version = '0.0.1-SNAPSHOT'
@@ -27,6 +29,36 @@ repositories {
 
 ext {
 	set('springCloudVersion', "Greenwich.SR3")
+}
+
+jacocoTestReport {
+    reports {
+        xml.enabled false
+        csv.enabled false
+        html.destination file("${buildDir}/jacocoHtml")
+    }
+}
+
+jacocoTestCoverageVerification {
+    violationRules {
+        rule {
+            limit {
+                minimum = 0.5
+            }
+        }
+
+        rule {
+            enabled = false
+            element = 'CLASS'
+            includes = ['org.gradle.*']
+
+            limit {
+                counter = 'LINE'
+                value = 'TOTALCOUNT'
+                maximum = 0.3
+            }
+        }
+    }
 }
 
 dependencies {
@@ -94,6 +126,10 @@ dependencies {
 
 test {
 	useJUnitPlatform()
+	jacoco {
+        destinationFile = file("$buildDir/jacoco/jacocoTest.exec")
+        classDumpDir = file("$buildDir/jacoco/classpathdumps")
+    }
 }
 
 dependencyManagement {
