--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
         name: Analyze on SonarCloud
         command: gradle build sonarqube -Dsonar.projectKey="algorithmikk_jukebox-settings-control" -Dsonar.organization="algorithmikk" -Dsonar.host.url="https://sonarcloud.io"
     - store_artifacts:
-        path:  jacoco
+        path:  ${buildDir}/jacoco
 
 workflows:
   main:
