--- a/.theia/settings.json
+++ b/.theia/settings.json
@@ -1,4 +1,5 @@
 {
    "java.dependency.packagePresentation": "hierarchical",
-   "java.dependency.syncWithFolderExplorer": false
+   "java.dependency.syncWithFolderExplorer": false,
+   "java.configuration.updateBuildConfiguration": "automatic"
 }
